# ai_cam_dashbord

./: .env  .gitignore  .txt  LICENSE  README-EN.md  README.md  ci.yaml  vercel.json
backend/: EVENTS_README.md  GOOGLE_SHEETS_SYNC.md  TREND_ANALYSIS_API.md  app.py  generate_today_data.py  nohup.out  pyproject.toml  requirements.txt  run.py  sync_events.py  test_event_effect.py  test_trend_analysis.py  vercel.json
backend/app/: main.py  models.py
backend/app/api/endpoints/: csv_analysis.py  events.py  fetch_csv.py  fetch_csv_exmeidai-old.py  fetch_csv_exmeidai.py  foreigners.py  get_graph.py  root.py  trend_analysis.py
backend/app/core/: config.py
backend/app/jobs/: fetch_csv_job.py  fetch_exmeidai_job.py
backend/app/services/: ai_service.py  ai_service_debug.py  csv_events_service.py  foreigners_service.py  highlighter_service.py  weather_service.py
backend/app/services/analyze/: analyze_event.py  analyze_integrated_data.py  analyze_weather.py  analyze_weather_monthly_weekday.py  analyze_weather_weekday.py  generate_histograms.py  generate_histograms0508.py  generate_histograms1.py  generate_histograms2.py  get_data_for_calendar.py  get_data_for_calendar2504.py  get_data_for_calendar250414.py  get_data_for_date_time.py  get_data_for_date_time250504.py  get_data_for_month.py  get_data_for_week.py  get_data_for_week_time.py  get_data_for_week_time250522.py  get_data_for_year.py  get_event_effect.py  get_trend_analysis.py  tempCodeRunnerFile.py  visualize_color_space.py  (+1 more)
backend/instance/: config.py
backend/scripts/: install_fetch_jobs.sh  run_batch_jobs.sh
(+93 files in other folders)
