[project]
name = "backend"
version = "0.1.0"
description = "AI Camera Dashboard Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "starlette",
    "pycryptodome",
    "aiohttp",
    "pydantic-settings",
    "pydantic",
    "boto3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

